--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,8 +1,6 @@
-.scroll {
-    height: 100%;
-}
-
-#map {
-    width: 100%;
-    height: 100%;
+.login{
+  .background {
+    background-image: url('https://s-media-cache-ak0.pinimg.com/564x/34/07/46/3407461fc55921a63dc599f6ee916ecf.jpg');
+    background-size: cover;
+  }
 }
