--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -15,3 +15,8 @@
 
 @import "../pages/login/login";
 
+@import "../pages/signup/signup";
+
+@import "../pages/signupShopper/signupShopper";
+
+@import "../pages/signupStoreOwner/signupStoreOwner";
