--- a/app/pages/dashboard/dashboard.scss
+++ b/app/pages/dashboard/dashboard.scss
@@ -1,8 +1,62 @@
-.scroll {
-    height: 100%;
-}
+.dashboard 
 
-#map {
+	h2 {
+    margin: 100px 8px 13px 0;
+    width: 500px;
+    font-size: 50px;
+    font-family: 'Rock Salt', cursive;
+    color: #4CAF50;
     width: 100%;
-    height: 100%;
-}
+    height: auto;
+    margin: auto;
+	}
+
+	.buttons {
+	margin: 0;
+	border-radius: 0;
+	
+	}
+
+	#slider2bg {
+	background-image: url('../img/books.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 100%;
+	height: auto;
+	margin: auto;
+	z-index: 2;
+	position: relative;
+	}
+
+	p{
+	position: absolute;
+    top: 120px;
+    margin: 20px;
+    color: white;
+    z-index: 3
+	}
+
+	#slider3bg {
+	background-image: url('../img/brush.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 112%;
+	height: auto;
+	margin: auto;
+	z-index: 2;
+	position: relative;
+	}
+
+	#slider4bg {
+	background-image: url('../img/brush.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 112%;
+	height: auto;
+	margin: auto;
+	z-index: 2;
+	position: relative;
+	}
