--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,6 +1,15 @@
 .login{
-  .background {
-    background-image: url('https://s-media-cache-ak0.pinimg.com/564x/34/07/46/3407461fc55921a63dc599f6ee916ecf.jpg');
-    background-size: cover;
-  }
+	
+	#logo {
+	background-image: url('../img/logo.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	width: 150px;
+	height: 150px;
+	margin-top: 100px;
+	margin-left: 100px;
+	z-index: 2;
+	position: relative;
+	}
 }
