login- added Facebook login; modified signupShopper- added terms and conditions, removed gender; modified signupStoreOwner- added checkboxes for specific brands/materials that they are selling, added desc limit for file upload, etc.

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -20,3 +20,5 @@
 @import "../pages/signupShopper/signupShopper";
 
 @import "../pages/signupStoreOwner/signupStoreOwner";
+
+@import "../pages/savedSearches/savedSearches";
